Set Maximum Volume to 150%

The maximum UI value suggested by PulseAudio (PA_VOLUME_UI_MAX)
results in 153% (11dB), which can be seen (and reported) as a bug

See: https://www.freedesktop.org/software/pulseaudio/doxygen/volume_8h.html

BUG: 487508
FIXED-IN: 6.1